express-prisma-kubernetes/kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-prisma-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-prisma
  template:
    metadata:
      labels:
        app: express-prisma
    spec:
      containers:
        - name: app
          image: olymahmudmugdho/express-prisma-app
          ports:
            - containerPort: 3000
