express-prisma-kubernetes/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  type: ClusterIP
  selector:
    app: express-prisma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
